# TAO-P4code

./: CMakeLists.txt  README.md  port_map.json
agent/: CMakeLists.txt  entry_api.c  entry_api.h  main.c  neigh.c  pmd.c  proj_run.sh  route.c  tunnel_map.c  vrf.c
flow_processing/: active_flowset_aggregated.txt  cs_rules_aggregation  cs_rules_aggregation.cpp
platform/: pseudo-code
platform/drivers/: CMakeLists.txt  hal.hpp  hal_init.cpp  hal_table_api.cpp  hal_table_api.h  hal_table_type.h  route.cpp  route.hpp  shc_aging.cpp  shc_digest.cpp  shc_digest.hpp
platform/drivers/test_hal/: CMakeLists.txt  common.h  driver_cuckoo_hash_get.cpp  main.cpp  route_test.cpp  test.hpp
platform/p4src/: shc_for_real_time_test.py  shc_real_time_sketch.bak.p4  shc_real_time_sketch.bak2.p4  shc_real_time_sketch.p4
platform/p4src_dev/: shc_real_time_sketch.p4  test1.p4
platform/p4src_test/: shc_real_time_sketch.p4
platform/p4src_test2/: shc_real_time_sketch.p4
proj_execute/: driver_test  kill.sh  perf.data
proj_output/: 10s_active_flow.txt  1s_active_flow.txt  300s_active_flow.txt  5s_active_flow.txt  60s_active_flow.txt  active_flow_identification_time.txt  active_flow_selected_num_per_sec.txt  active_flow_selection_rate.txt  forward_num_per_sec.txt  route_output.txt  route_test_ttl.txt
test_for_learn/: raw_socket.c  send_pkt.py  笔记.md
